kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8-network-policy
spec:
  podSelector:
    matchLabels:
      app: postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
           app: api
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backup
      podSelector:
        matchLabels:
          backup: postgres        
    ports:
    - protocol: TCP
      port: 5432
